--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -1,2 +1,19 @@
 <h3>Welcome</h3>
 <p><%= link_to 'Users:', users_path %> <%= User.count %> registered</p>
+
+
+<hr>
+
+
+<% if user_signed_in? %>
+
+	Connecté
+
+<% else %>
+
+Pas connecté
+
+<% end %>
+
+<hr>
+
